<resources>
    <string name="app_name">BattleBrain</string>
    <string name="select_level">Select level</string>
    <string-array name="Languages">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_activity">Quiz Activity</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="your_score">Your Score :</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="na">NA</string>
    <string name="current_high_score">Current High Score :</string>
    <string name="select_the_game_you_want_to_play">Select the game you want to play</string>
    <string name="rock_paper_scissor">Rock Paper Scissor</string>
    <string name="quizlingo">QuizLingo</string>


    <string name="reset">Reset</string>
    <string name="you">You</string>
    <string name="ai">AI</string>
    <string name="lose">You Lose !!!</string>
    <string name="again">again</string>
    <string name="cancel">Cancel</string>
    <string name="play_again">Play again</string>
    <string name="exit">exit</string>
    <string name="you_won">You Won</string>
    <string name="you_lost">You Lost</string>
    <string name="choose">choose</string>
    <string name="middledot">::</string>
    <string name="lost_won_tie">lost,won,tie</string>

    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="num_questions">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="category">
        <item>General Knowledge</item>
        <item>Books</item>
        <item>Music</item>
        <item>Film</item>
        <item>Video Games</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Anime &amp; Manga</item>
        <item>Vehicles</item>
    </string-array>

</resources>
