<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectDetails">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/quiz_activity"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/difficultyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/difficulty_level"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/difficulty_levels"
            android:padding="16dp" />

        <TextView
            android:id="@+id/numQuestionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/number_of_questions"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/numQuestionsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/num_questions"
            android:padding="16dp" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/category"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category"
            android:padding="16dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/start_quiz"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/score_text"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_high_score"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="130dp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/score_text"
        app:layout_constraintTop_toTopOf="@id/score_text"
        android:text="@string/na"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>